finally fixing the issue with multiples of the same number, adding a nice modal instead of a js alert and changing the font to something more readable

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 body {
-  font-family: 'Snowburst One', cursive;
+  font-family: 'Boogaloo', cursive;
   background: #aad8e2;
   text-align: center;
 }
